[package]
name = "curved"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
itertools = "0.13.0"
tiff = "0.9.1"
image = "0.25.5"
imageproc = "0.25.0"
ab_glyph = "0.2.29"
splines = { version = "4.4.1", features = ["serialization"]}
serde_json = "1.0.135"
eframe = "0.30.0"
rfd = "0.15.2"
egui_extras = "0.30.0"
